2008-05-30  Philip Van Hoof  <pvanhoof@gnome.org>

	* Merged indexer-split with xesam-support
	svn merge -r 1495:1538 ../xesam-support

2008-05-29  Philip Van Hoof  <pvanhoof@gnome.org>

	* Merged xesam-support with indexer-split
	svn merge -r 1524:1537 ../indexer-split

2008-05-29  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-dbus-xesam.c:
	* src/trackerd/tracker-dbus-xesam.h:

	Refactored tracker_dbus_xesam_emit_search_done to
	tracker_xesam_live_search_emit_done

2008-05-29  Philip Van Hoof  <pvanhoof@gnome.org>

	* Merged xesam-support with indexer-split
	svn merge -r 1502:1524 ../indexer-split

2008-05-29  Martyn Russell  <martyn@imendio.com>

	* configure.ac:
	* data/Makefile.am:
	* data/dbus/Makefile.am:
	* data/org.freedesktop.Tracker.Indexer.service.in:
	* data/org.freedesktop.Tracker.service.in:
	* data/tracker-dbus-daemon.xml:
	* data/tracker-dbus-files.xml:
	* data/tracker-dbus-keywords.xml:
	* data/tracker-dbus-metadata.xml:
	* data/tracker-dbus-search.xml:
	* data/tracker-dbus-xesam.xml:
	* data/tracker-indexer.xml: Moved to data/dbus/ and the -dbus-
	prefix has been removed from the daemon xml files.

	* data/tracker.cfg: Removed, it is generated initially now.
	
	* src/libtracker/Makefile.am:
	* src/libtracker/tracker.c: Used the new data/dbus/*.xml files and
	removed the -dbus- name space from the included generated files.
	
	* src/tracker-indexer/Makefile.am:
	* src/trackerd/Makefile.am:
	* src/trackerd/tracker-cache.c: 
	* src/trackerd/tracker-daemon.[ch]: 
	* src/trackerd/tracker-db-sqlite.c: 
	* src/trackerd/tracker-dbus-daemon.[ch]:
	* src/trackerd/tracker-dbus-files.[ch]:
	* src/trackerd/tracker-dbus-keywords.[ch]:
	* src/trackerd/tracker-dbus-metadata.[ch]:
	* src/trackerd/tracker-dbus-search.[ch]:
	* src/trackerd/tracker-dbus-xesam.[ch]:
	* src/trackerd/tracker-dbus.c:
	* src/trackerd/tracker-email-evolution.c:
	* src/trackerd/tracker-email-modest.c:
	* src/trackerd/tracker-email-utils.c:
	* src/trackerd/tracker-main.c: